fixed Odd loop notes

--- a/week-5/Kendl-sequence-game.html
+++ b/week-5/Kendl-sequence-game.html
@@ -119,7 +119,7 @@ document.getElementById("btnDisplaySequence").onclick = function sequenceGame() 
         //Display the string value of fibonacciSequenceText within the card-content div
         document.getElementById("results").innerHTML = evenText.slice(0,-2);
     }
-//ODD WHILE LOOP
+//ODD FOR LOOP
     else if (choice == odd) {
 //Define variable to display For loop results
         let oddText = "";
